--- a/web/_includes/_customer_menu_bar.xhtml
+++ b/web/_includes/_customer_menu_bar.xhtml
@@ -4,6 +4,16 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
+
+	<!-- login dialog -->
+	<div class="modal fade" id="myModal" role="dialog">
+		<ui:include src="_index_dialog_login.xhtml"/>
+	</div>
+	<!-- register dialog -->
+	<div class="modal fade" id="myModal2" role="dialog">
+		<ui:include src="_index_dialog_register.xhtml"/>
+	</div>
+
 	<div>
 		<div class="col-md-12 col-xs-12">
 			<h:panelGroup rendered="#{not loginBean.logged}">
