--- a/web/_includes/_index_step-1.xhtml
+++ b/web/_includes/_index_step-1.xhtml
@@ -7,7 +7,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 
-	<div class="row setup-content step activeStepInfo" id="step-1">
+	<h:panelGroup rendered="#{createQuotationBean.step eq 0}">
+	<div class="row setup-content step" id="step-1">
 		<div class="col-xs-12">
 			<div class="col-md-12 well text-center">
 				<h:panelGroup rendered="#{not loginBean.logged}">
@@ -21,7 +22,7 @@
 						<p:commandLink value="#{veh.vehicle.fullName}" process="@this"
 									   actionListener="#{createQuotationBean.choosePublicVehicle(veh)}"
 									   update=":form-1:panel :form-1:step"
-									   oncomplete="resetActive(80, 'step-5');" />
+									   oncomplete="resetActive(67, 'step-5');" />
 						<br/>
 					</ui:repeat>
 					<br/>
@@ -35,11 +36,12 @@
 							<p:commandLink value="#{make.nameAr}" process="@this"
 										   actionListener="#{createQuotationBean.chooseMake(make)}"
 										   update=":form-1:panel :form-1:step"
-										   oncomplete="resetActive(20, 'step-2');" />
+										   oncomplete="resetActive(17, 'step-2');" />
 						</div>
 					</p:column>
 				</p:dataGrid>
 			</div>
 		</div>
 	</div>
+	</h:panelGroup>
 </ui:composition>
