--- a/web/_includes/_index_step-2.xhtml
+++ b/web/_includes/_index_step-2.xhtml
@@ -6,7 +6,8 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	<div class="row setup-content step hiddenStepInfo" id="step-2">
+	<h:panelGroup rendered="#{createQuotationBean.step eq 1}">
+	<div class="row setup-content step" id="step-2">
 		<p>#{lex.make}: #{createQuotationBean.fullVehicleName}</p>
 		<div class="col-xs-12">
 			<div class="col-md-12 well text-center">
@@ -15,7 +16,7 @@
 							var="type">
 					<p:column>
 						<p:commandLink value="#{type.nameAr}" process="@this"
-									   oncomplete="resetActive(40, 'step-3');"
+									   oncomplete="resetActive(33, 'step-3');"
 									   actionListener="#{createQuotationBean.chooseModel(type)}"
 									   update=":form-1:panel :form-1:step" />
 					</p:column>
@@ -29,4 +30,5 @@
 			</div>
 		</div>
 	</div>
+	</h:panelGroup>
 </ui:composition>
