--- a/web/_includes/_index_step-3.xhtml
+++ b/web/_includes/_index_step-3.xhtml
@@ -6,7 +6,8 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	<div class="row setup-content step hiddenStepInfo" id="step-3">
+	<h:panelGroup rendered="#{createQuotationBean.step eq 2}">
+	<div class="row setup-content step" id="step-3">
 		<p>#{lex.make}: #{createQuotationBean.fullVehicleName}</p>
 		<div class="col-xs-12">
 			<div class="col-md-12 well text-center">
@@ -17,7 +18,7 @@
 						<p:commandLink value="#{modelYear.year}" process="@this"
 									   actionListener="#{createQuotationBean.chooseModelYear(modelYear)}"
 									   update=":form-1:panel :form-1:step"
-									   oncomplete="resetActive(60, 'step-4');" />
+									   oncomplete="resetActive(50, 'step-4');" />
 					</p:column>
 				</p:dataGrid>
 				<br />
@@ -29,5 +30,5 @@
 			</div>
 		</div>
 	</div>
-
+	</h:panelGroup>
 </ui:composition>
