--- a/web/_includes/_index_step-6.xhtml
+++ b/web/_includes/_index_step-6.xhtml
@@ -6,105 +6,108 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-	<div class="row setup-content step hiddenStepInfo" id="step-6">
+	<h:panelGroup rendered="#{createQuotationBean.step eq 5}">
+	<div class="row setup-content step" id="step-6">
 		<div class="col-xs-12">
 			<div class="col-md-12 well text-center">
-				<h3 class="title-price">#{lex.sendOrder}</h3>
-				<h:panelGroup rendered="#{loginBean.logged}">
-					<p>#{lex.make}: #{createQuotationBean.fullVehicleName}</p>
-					<h:panelGroup rendered="#{not createQuotationBean.quotationRequest.imageAttached}">
-						<p>#{lex.vin}: #{createQuotationBean.vin}</p>
-					</h:panelGroup>
-					<table class="table table-hover">
-						<thead>
-						<tr>
-							<th>#{lex.itemNameOrNum}</th>
-							<th>#{lex.quantity}</th>
-						</tr>
-						</thead>
-						<tbody>
-						<ui:repeat id="summary-table" var="item"
-								   value="#{createQuotationBean.quotationRequest.quotationItems}">
-							<tr>
-								<td><h:outputText value="#{item.itemName}" /></td>
-								<td><h:outputText value="#{item.quantity}" /></td>
-							</tr>
-						</ui:repeat>
-						</tbody>
-					</table>
-					<br />
-					<p class="title-price">#{lex.region}</p>
-					<h:selectOneMenu id="region" styleClass="form-control"
-									 value="#{createQuotationBean.selectedRegionId}" required="true">
-						<f:selectItem itemValue="#{0}"
-									  itemLabel="#{lex.selectRegion}" />
-						<f:selectItems
-								value="#{createQuotationBean.customerCountry.regions}" var="city"
-								itemValue="#{city.id}" itemLabel="#{city.nameAr}" />
-						<f:ajax listener="#{createQuotationBean.chooseRegion()}"
-								execute="@this" render="city-panel submit" />
+				<h3 class="title-price">ادخل معلومات الدفع</h3>
+
+				<h3 class="subtitle-price">نبحث لك عن أفضل سعر وجودة بين أكثر من 2000 مورد داخل و خارج السعودية</h3>
+
+				<h:button value="أطلب الخدمة ب 15 ريال فقط" styleClass="btn btn-payment" onclick="return false;">
+
+				</h:button>
+
+
+				<br/>
+				<br/>
+				<p>
+					*المبلغ سيتم اضافته للمحفظة و يخصم من سعر القطع اثناء الشراء
+				</p>
+				<p>
+					*في حال عدم العثور على القطعة سيتم استرجاع المبلغ فورا
+				</p>
+
+				<div class="col-xs-12">
+					<h:outputText value="#{lex.paymentMethod}"
+								  style="font-size: 12px; color: #aaaaaa" />
+				</div>
+				<div class="col-xs-12">
+					<h:selectOneMenu value="#{createQuotationBean.paymentMethod}" required="true" requiredMessage="اختر طريقة الدفع"
+									 id="payment" styleClass="form-control">
+						<f:selectItem itemValue="N" itemLabel="#{lex.selectPayment}" noSelectionOption="true" />
+						<f:selectItem itemValue="W" itemLabel="#{lex.wire}" />
+						<f:selectItem itemValue="V" itemLabel="#{lex.visa} - #{lex.masterCard}" />
+						<f:selectItem itemValue="M" itemLabel="مدى" />
+						<f:ajax execute="@this" render="payment-panel"/>
 					</h:selectOneMenu>
-					<h:panelGroup id="city-panel">
-						<h:panelGroup
-								rendered="#{createQuotationBean.selectedRegionId gt 0}">
-							<p class="title-price">#{lex.city}</p>
-							<h:selectOneMenu id="city" styleClass="form-control"
-											 value="#{createQuotationBean.quotationRequest.cityId}" required="true">
-								<f:selectItems
-										value="#{createQuotationBean.selectedRegion.cities}" var="city"
-										itemValue="#{city.id}" itemLabel="#{city.nameAr}" />
-								<f:ajax />
-							</h:selectOneMenu>
+					<br /> <br />
+				</div>
 
-							<br />
-
-							<br />
-							<br />
-							<div>
-								<h:selectBooleanCheckbox style="height: 20px!important;"
-														 styleClass="form-control" value="#{createQuotationBean.agree}">
-									<f:ajax execute="@this" render="submit"/>
-								</h:selectBooleanCheckbox>
-								<h:outputLink value="terms" target="_blank">
-									<h:outputText value="  #{lex.agreeTerms}" />
-								</h:outputLink>
+				<h:panelGroup id="payment-panel">
+					<h:panelGroup rendered="#{createQuotationBean.paymentMethod eq 'V' or createQuotationBean.paymentMethod eq 'M'}">
+						<div class="col-xs-12" id="credit-card-div">
+							<div align="center">
+								<h:graphicImage value="/resources/images/visa.png" rendered="#{createQuotationBean.paymentMethod eq 'V'}" style="width: 50px" />
+								<h:graphicImage value="/resources/images/mastercard.png" rendered="#{createQuotationBean.paymentMethod eq 'V'}" style="width: 50px" />
+								<h:graphicImage value="/resources/images/mada.png" rendered="#{createQuotationBean.paymentMethod eq 'M'}" style="width: 50px" />
+								<br /> <br />
 							</div>
-						</h:panelGroup>
+							<div>
+								<h:outputText rendered="#{createQuotationBean.paymentFailed}" value="لم تتم عملية الدفع بنجاح, الرجاء التأكد من معلومات الدفع" style="color: red;"/>
+							</div>
+							<div class="col-xs-12">
+								<h:outputText value="#{lex.cardNumber}" style="font-size: 12px; color: #aaaaaa" />
+								<h:inputText id="number" value="#{createQuotationBean.cardHolder.ccNumber}" styleClass="form-control" a:maxlength="16" required="true" requiredMessage="ادخل رقم البطاقة">
+									<f:ajax execute="@this"/>
+								</h:inputText>
+							</div>
+							<div class="col-xs-12">
+								<h:outputText value="#{lex.cardName}" style="font-size: 12px; color: #aaaaaa" />
+								<h:inputText value="#{createQuotationBean.cardHolder.ccName}" styleClass="form-control" required="true" requiredMessage="ادخل اسم حامل البطاقة">
+									<f:ajax execute="@this"/>
+								</h:inputText>
+							</div>
+							<div class="col-xs-6">
+								<h:outputText value="#{lex.cartYear}" style="font-size: 12px; color: #aaaaaa" />
+								<h:selectOneMenu styleClass="form-control" value="#{createQuotationBean.cardHolder.ccYear}" required="true">
+									<f:selectItems value="#{createQuotationBean.cardHolder.expiryDates}" var="year" itemValue="#{year}" itemLabel="#{year}" />
+									<f:ajax execute="@this"/>
+								</h:selectOneMenu>
+							</div>
+							<div class="col-xs-6">
+								<h:outputText value="#{lex.cartMonth}" style="font-size: 12px; color: #aaaaaa" />
+								<h:selectOneMenu styleClass="form-control" value="#{createQuotationBean.cardHolder.ccMonth}" required="true" >
+									<f:selectItems value="#{createQuotationBean.cardHolder.expiryMonths}" var="month" itemValue="#{month}" itemLabel="#{month}" />
+									<f:ajax execute="@this"/>
+								</h:selectOneMenu>
+							</div>
+							<div class="col-xs-6 col-xs-offset-3">
+								<h:outputText value="#{lex.cvc}" style="font-size: 12px; color: #aaaaaa" />
+								<h:inputText value="#{createQuotationBean.cardHolder.ccCvc}" styleClass="form-control" a:maxlength="3" required="true" requiredMessage="ادخل الرقم السري">
+									<f:ajax execute="@this"/>
+								</h:inputText>
+							</div>
+						</div>
 					</h:panelGroup>
+				</h:panelGroup>
 
-				</h:panelGroup>
-				<br />
-				<h:panelGroup rendered="#{not loginBean.logged}">
-					<h:outputText />
-					<a onclick="hideModalAndShowLogin()"> <h:outputText
-							value="#{lex.loginToComplete}" />
-					</a>
-					<br />
-					<br />
-					<h:outputText value="#{lex.dontHaveAccount}" />
-					<a onclick="hideModalAndShowRegister()"> <h:outputText
-							value="#{lex.registerNow}" />
-					</a>
-					<br />
-					<br />
-				</h:panelGroup>
-				<br /> <br />
+				<br/>
+				<div>
 				<h:commandButton
 						actionListener="#{createQuotationBean.resetToStep(4)}"
 						value="#{lex.previous}" styleClass="btn">
 					<f:ajax execute="@this" render=":form-1:panel :form-1:step" />
 				</h:commandButton>
-				<br /> <br />
-				<p:messages/>
-				<h:commandButton rendered="#{loginBean.logged}"
-								 actionListener="#{createQuotationBean.submit()}" id="submit"
-								 value="#{lex.submitOrder}"
-								 disabled="#{((not (createQuotationBean.agree)) or (createQuotationBean.selectedRegionId eq 0))}"
-								 styleClass="btn btn-primary hvr-push" onclick="$('#myModal3').modal('toggle');PF('statusDialog').hide();">
-					<f:ajax execute="@form" render="@form :complete" />
+				<h:commandButton actionListener="#{createQuotationBean.nextPayment}" value="#{lex.next}" styleClass="btn">
+					<f:ajax execute="@form" render=":form-1:step :form-1:panel payment-msg" />
 				</h:commandButton>
+				<br /> <br />
+				<p:messages id="payment-msg"/>
 				<br />
+				</div>
 			</div>
 		</div>
 	</div>
+	</h:panelGroup>
 </ui:composition>
