--- a/web/_includes/_index_step-6.xhtml
+++ b/web/_includes/_index_step-6.xhtml
@@ -10,11 +10,11 @@
 	<div class="row setup-content step" id="step-6">
 		<div class="col-xs-12">
 			<div class="col-md-12 well text-center">
-				<h3 class="title-price">ادخل معلومات الدفع</h3>
+				<h3 class="title-price">#{lex.enterPaymentInfo}</h3>
 
-				<h3 class="subtitle-price">نبحث لك عن أفضل سعر وجودة بين أكثر من 2000 مورد داخل و خارج السعودية</h3>
+				<h3 class="subtitle-price">#{lex.weLookForBestPrice}</h3>
 
-				<h:button value="أطلب الخدمة ب 15 ريال فقط" styleClass="btn btn-payment" onclick="return false;">
+				<h:button value="#{lex.orderQuotationService}" styleClass="btn btn-payment" onclick="return false;">
 
 				</h:button>
 
@@ -22,10 +22,10 @@
 				<br/>
 				<br/>
 				<p>
-					*المبلغ سيتم اضافته للمحفظة و يخصم من سعر القطع اثناء الشراء
+					#{lex.priceAddedToWallet}
 				</p>
 				<p>
-					*في حال عدم العثور على القطعة سيتم استرجاع المبلغ فورا
+					#{lex.refundIfNotAvailable}
 				</p>
 
 				<div class="col-xs-12">
@@ -33,12 +33,11 @@
 								  style="font-size: 12px; color: #aaaaaa" />
 				</div>
 				<div class="col-xs-12">
-					<h:selectOneMenu value="#{createQuotationBean.paymentMethod}" required="true" requiredMessage="اختر طريقة الدفع"
+					<h:selectOneMenu value="#{createQuotationBean.paymentMethod}" required="true" requiredMessage="#{lex.selectPayment}"
 									 id="payment" styleClass="form-control">
-						<f:selectItem itemValue="N" itemLabel="#{lex.selectPayment}" noSelectionOption="true" />
-						<f:selectItem itemValue="W" itemLabel="#{lex.wire}" />
+						<f:selectItem itemLabel="#{lex.selectPayment}" noSelectionOption="true" />
 						<f:selectItem itemValue="V" itemLabel="#{lex.visa} - #{lex.masterCard}" />
-						<f:selectItem itemValue="M" itemLabel="مدى" />
+						<f:selectItem itemValue="M" itemLabel="#{lex.mada}" />
 						<f:ajax execute="@this" render="payment-panel"/>
 					</h:selectOneMenu>
 					<br /> <br />
@@ -54,17 +53,17 @@
 								<br /> <br />
 							</div>
 							<div>
-								<h:outputText rendered="#{createQuotationBean.paymentFailed}" value="لم تتم عملية الدفع بنجاح, الرجاء التأكد من معلومات الدفع" style="color: red;"/>
+								<h:outputText rendered="#{createQuotationBean.paymentFailed}" value="#{lex.paymentFailed}" style="color: red;"/>
 							</div>
 							<div class="col-xs-12">
 								<h:outputText value="#{lex.cardNumber}" style="font-size: 12px; color: #aaaaaa" />
-								<h:inputText id="number" value="#{createQuotationBean.cardHolder.ccNumber}" styleClass="form-control" a:maxlength="16" required="true" requiredMessage="ادخل رقم البطاقة">
+								<h:inputText id="number" value="#{createQuotationBean.cardHolder.ccNumber}" styleClass="form-control" a:maxlength="16" required="true" requiredMessage="#{lex.enterCardNumber}">
 									<f:ajax execute="@this"/>
 								</h:inputText>
 							</div>
 							<div class="col-xs-12">
 								<h:outputText value="#{lex.cardName}" style="font-size: 12px; color: #aaaaaa" />
-								<h:inputText value="#{createQuotationBean.cardHolder.ccName}" styleClass="form-control" required="true" requiredMessage="ادخل اسم حامل البطاقة">
+								<h:inputText value="#{createQuotationBean.cardHolder.ccName}" styleClass="form-control" required="true" requiredMessage="#{lex.enterCardName}">
 									<f:ajax execute="@this"/>
 								</h:inputText>
 							</div>
@@ -84,7 +83,7 @@
 							</div>
 							<div class="col-xs-6 col-xs-offset-3">
 								<h:outputText value="#{lex.cvc}" style="font-size: 12px; color: #aaaaaa" />
-								<h:inputText value="#{createQuotationBean.cardHolder.ccCvc}" styleClass="form-control" a:maxlength="3" required="true" requiredMessage="ادخل الرقم السري">
+								<h:inputText value="#{createQuotationBean.cardHolder.ccCvc}" styleClass="form-control" a:maxlength="3" required="true" requiredMessage="#{lex.enterCvc}">
 									<f:ajax execute="@this"/>
 								</h:inputText>
 							</div>
