--- a/web/_includes/_index_step-7.xhtml
+++ b/web/_includes/_index_step-7.xhtml
@@ -10,7 +10,7 @@
 		<div class="row setup-content step" id="step-7">
 			<div class="col-xs-12">
 				<div class="col-md-12 well text-center">
-					<h3 class="title-price">#{lex.sendOrder}</h3>
+					<h3 class="title-price">#{lex.sendQuotationOrder}</h3>
 					<h:panelGroup rendered="#{loginBean.logged}">
 						<p>#{lex.make}: #{createQuotationBean.fullVehicleName}</p>
 						<h:panelGroup rendered="#{not createQuotationBean.quotationRequest.imageAttached}">
