--- a/web/_includes/_index_steps_progress-bar.xhtml
+++ b/web/_includes/_index_steps_progress-bar.xhtml
@@ -10,7 +10,7 @@
 	<div class="progress" id="progress1">
 		<div class="progress-bar" role="progressbar" aria-valuenow="20"
 			 aria-valuemin="0" aria-valuemax="100"></div>
-		<span class="progress-type">التقدم العام</span> <span
+		<span class="progress-type">#{lex.stepProgress}</span> <span
 			class="progress-completed">0%</span>
 	</div>
 </ui:composition>
