fixed add on image error in index

--- a/web/_includes/_index_section_infograph.xhtml
+++ b/web/_includes/_index_section_infograph.xhtml
@@ -12,11 +12,10 @@
 				<h:form>
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 step-box">
 						<div class="step-icon  hvr-shrink">
-							<p:commandLink oncomplete="showModal3()"
-										   action="#{createQuotationBean.clickOrderButton('step 1', createQuotationBean.step)}">
+							<a href="create-quotation">
 								<h:graphicImage value="/resources/images/step1.png"
 												rendered="true" styleClass="img-responsive" />
-							</p:commandLink>
+							</a>
 						</div>
 						<h3>#{lex.step1Title}</h3>
 						<p>#{lex.step1Text}</p>
@@ -24,11 +23,10 @@
 
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 step-box">
 						<div class="step-icon hvr-shrink">
-							<p:commandLink oncomplete="showModal3()"
-										   action="#{createQuotationBean.clickOrderButton('step 2',createQuotationBean.step)}">
+							<a href="create-quotation">
 								<h:graphicImage value="/resources/images/step2.png"
 												rendered="true" styleClass="img-responsive" />
-							</p:commandLink>
+							</a>
 						</div>
 						<h3>#{lex.step2Title}</h3>
 						<p>#{lex.step2Text}</p>
@@ -36,22 +34,20 @@
 
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 step-box">
 						<div class="step-icon  hvr-shrink">
-							<p:commandLink oncomplete="showModal3()"
-										   action="#{createQuotationBean.clickOrderButton('step 3',createQuotationBean.step)}">
+							<a href="create-quotation">
 								<h:graphicImage value="/resources/images/step3.png"
 												rendered="true" styleClass="img-responsive" />
-							</p:commandLink>
+							</a>
 						</div>
 						<h3>#{lex.step3Title}</h3>
 						<p>#{lex.step3Text}</p>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 step-box">
 						<div class="step-icon hvr-shrink">
-							<p:commandLink oncomplete="showModal3()"
-										   action="#{createQuotationBean.clickOrderButton('step 4',createQuotationBean.step)}">
+							<a href="create-quotation">
 								<h:graphicImage value="/resources/images/step4.png"
 												rendered="true" styleClass="img-responsive" />
-							</p:commandLink>
+							</a>
 						</div>
 						<h3>#{lex.step4Title}</h3>
 						<p>#{lex.step4Text}</p>
