--- a/web/_includes/_index_step-6.xhtml
+++ b/web/_includes/_index_step-6.xhtml
@@ -18,7 +18,6 @@
 
 				</h:button>
 
-
 				<br/>
 				<br/>
 				<div class="col-xs-12">
@@ -29,7 +28,7 @@
 					<h:selectOneMenu value="#{createQuotationBean.paymentMethod}" required="true" requiredMessage="#{lex.selectPayment}"
 									 id="payment" styleClass="form-control">
 						<f:selectItem itemLabel="#{lex.selectPayment}" noSelectionOption="true" />
-						<f:selectItem itemValue="V" itemLabel="#{lex.visa} - #{lex.masterCard}" />
+						<f:selectItem itemValue="V" itemLabel="#{lex.visa} - #{lex.masterCard} - #{lex.amex}" />
 						<f:selectItem itemValue="M" itemLabel="#{lex.mada}" />
 						<f:ajax execute="@this" render="payment-panel"/>
 					</h:selectOneMenu>
@@ -42,6 +41,7 @@
 							<div align="center">
 								<h:graphicImage value="/resources/images/visa.png" rendered="#{createQuotationBean.paymentMethod eq 'V'}" style="width: 50px" />
 								<h:graphicImage value="/resources/images/mastercard.png" rendered="#{createQuotationBean.paymentMethod eq 'V'}" style="width: 50px" />
+								<h:graphicImage value="/resources/images/amex.jpg" rendered="#{createQuotationBean.paymentMethod eq 'V'}" style="width: 50px" />
 								<h:graphicImage value="/resources/images/mada.png" rendered="#{createQuotationBean.paymentMethod eq 'M'}" style="width: 50px" />
 								<br /> <br />
 							</div>
@@ -50,7 +50,7 @@
 							</div>
 							<div class="col-xs-12">
 								<h:outputText value="#{lex.cardNumber}" style="font-size: 12px; color: #aaaaaa" />
-								<h:inputText id="number" value="#{createQuotationBean.cardHolder.ccNumber}" styleClass="form-control" a:maxlength="16" required="true" requiredMessage="#{lex.enterCardNumber}">
+								<h:inputText id="number" value="#{createQuotationBean.cardHolder.ccNumber}" styleClass="form-control" a:minlength="15" a:maxlength="16" required="true" requiredMessage="#{lex.enterCardNumber}">
 									<f:ajax execute="@this"/>
 								</h:inputText>
 							</div>
